--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -11,7 +11,11 @@ jobs:
     steps:
 
      
-
+      - name: installation nodejs
+        run: |
+         curl -fsSL https://deb.nodesource.com/setup_18.x 
+         sudo -E bash -
+         sudo apt-get install -y nodejs
 
       
       - name: Git checkout
