--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -15,16 +15,26 @@ jobs:
         uses: actions/checkout@v2
       
       - name: clone ocrd-wiki to german
-        run: git clone https://github.com/OCR-D/ocrd-website.wiki.git && mv ocrd-website.wiki de/ && cd de && ls
+        run: |
+            git clone https://github.com/OCR-D/ocrd-website.wiki.git
+            mv ocrd-website.wiki de/
 
       - name: clone ocrd-wiki to english
-        run: git clone https://github.com/OCR-D/ocrd-website.wiki.git && mv ocrd-website.wiki en/ && cd en && ls
+        run: |
+           git clone https://github.com/OCR-D/ocrd-website.wiki.git
+           mv ocrd-website.wiki en/
+          
 
       - name: download DITA dtd
-        run: cd de/xsl && wget https://github.com/oxygenxml/oxygen-dita-translation-package-builder-addon/archive/refs/heads/master.zip && unzip master.zip  
+        run: |
+            cd de/xsl
+            wget https://github.com/oxygenxml/oxygen-dita-translation-package-builder-addon/archive/refs/heads/master.zip
+            unzip master.zip  
       
       - name: Download and install saxon german
-        run: wget https://www.saxonica.com/download/SaxonEE11-1J.zip && unzip SaxonEE11-1J.zip
+        run: |
+           wget https://www.saxonica.com/download/SaxonEE11-1J.zip
+           unzip SaxonEE11-1J.zip
              
       - name: wiki markdown ditamap
         run: |
@@ -51,11 +61,6 @@ jobs:
           -o:en/ocrd_ocrd_wiki.ditamap  
 
       
-      
-     
-
-
-      
       - name: Build Bootstrap-german
         uses: dita-ot/dita-ot-action@master
         with:
@@ -66,55 +71,27 @@ jobs:
               fox.jason.prismjs
             project: .github/dita-ot/html.xml
 
-      
-      
 
-      
-      
-      
-      
-      #- name: Build Bootstrap-german ⚙️
-      #  uses: dita-ot/dita-ot-action@master
-      #  with:
-      #    
-      #    install: |
-      #      apt-get update -q
-      #      export DEBIAN_FRONTEND=noninteractive
-      #      apt-get install -qy --no-install-recommends nodejs
-      #      nodejs -v
-      #    plugins: |
-      #       https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
-      #       https://github.com/infotexture/dita-bootstrap/archive/develop.zip
-      #       https://github.com/jason-fox/fox.jason.prismjs/archive/master.zip
-      #    build: |
-      #       dita --project=.github/dita-ot/html.xml
-            
-          
-          
-      #- name: Build Bootstrap-english ⚙️
-      #  uses: dita-ot/dita-ot-action@master
-      #  with:
-          #dita-ot-version: 3.7.0
-      #    install: |
-      #      apt-get update -q
-      #      export DEBIAN_FRONTEND=noninteractive
-      #      apt-get install -qy --no-install-recommends nodejs
-      #      nodejs -v
-      #    plugins: |
-      #      https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
-      #      https://github.com/infotexture/dita-bootstrap/archive/develop.zip
-      #      https://github.com/jason-fox/fox.jason.prismjs/archive/master.zip
-      #    build: |
-      #     dita --project=.github/dita-ot/html_en.xml
+      - name: Build Bootstrap-english
+        uses: dita-ot/dita-ot-action@master
+        with:
+            dita-ot-version: 3.7
+            plugins : |
+              fox.jason.extend.css
+              org.doctales.xmltask
+              fox.jason.prismjs
+            project: .github/dita-ot/html_en.xml      
+
           
             
       - name: output dir
         run: cd out && sudo mkdir rules
       - name: transform rules
-        run: sudo java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trFremdsprache.dita -o:out/rules/ruleset_character.json &&
-             sudo java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trLigaturen2.dita -o:out/rules/ruleset_ligature.json &&
-             sudo java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trSilbentrennung.dita -o:out/rules/ruleset_hyphenation.json &&
-             sudo java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/level_rom.dita -o:out/rules/ruleset_roman_digits.json
+        run: |
+            java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trFremdsprache.dita -o:out/rules/ruleset_character.json &&
+            java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trLigaturen2.dita -o:out/rules/ruleset_ligature.json &&
+            java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trSilbentrennung.dita -o:out/rules/ruleset_hyphenation.json &&
+            java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/level_rom.dita -o:out/rules/ruleset_roman_digits.json
 
       
 
