--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -36,7 +36,9 @@ jobs:
            wget https://www.saxonica.com/download/SaxonEE11-1J.zip
            unzip SaxonEE11-1J.zip
              
-       
+      - name: Download and install node
+        run: |
+           sudo apt install nodejs
       
       - name: add wiki faq german
         run: |
@@ -79,6 +81,8 @@ jobs:
             
       - name: output dir
         run: cd out && sudo mkdir rules
+      
+      
       - name: transform rules
         run: sudo java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trFremdsprache.dita -o:out/rules/ruleset_character.json &&
              sudo java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trLigaturen2.dita -o:out/rules/ruleset_ligature.json &&
