--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -36,9 +36,10 @@ jobs:
            wget https://www.saxonica.com/download/SaxonEE11-1J.zip
            unzip SaxonEE11-1J.zip
              
-      - name: Download and install node
-        run: |
-           sudo apt install nodejs
+      - name: Set Node.js version 12.x
+        uses: actions/setup-node@v1
+        with:
+        node-version: 12.x
            
 
       
