--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -61,6 +61,7 @@ jobs:
         with:
             install: |
               apt-get update -q
+              export DEBIAN_FRONTEND=noninteractive
               apt-get install -y apt-utils
               apt-get install -qy --no-install-recommends nodejs
             dita-ot-version: 3.7
