--- a/.github/workflows/new3.yml
+++ b/.github/workflows/new3.yml
@@ -2,17 +2,20 @@ name: DITA-OT-OCRD-FAQ
 on:
   push:
     tags:
-      - 'v2[0-9]+.[0-9]+.[0-9]+'
+      - 'v3[0-9]+.[0-9]+.[0-9]+'
   workflow_dispatch:
 jobs:
   build-dita:
     name: Build DITA
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      contents: write
     steps:
 
       
       - name: Git checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       
       - name: clone ocrd-wiki to german
         run: |
@@ -63,7 +66,7 @@ jobs:
               apt-get update -q
               export DEBIAN_FRONTEND=noninteractive
               apt-get install -qy --no-install-recommends nodejs
-            dita-ot-version: 3.7
+            dita-ot-version: 4.1
             plugins : |
               fox.jason.extend.css
               net.infotexture.dita-bootstrap
@@ -80,7 +83,7 @@ jobs:
               apt-get update -q
               export DEBIAN_FRONTEND=noninteractive
               apt-get install -qy --no-install-recommends nodejs
-            dita-ot-version: 3.7
+            dita-ot-version: 4.1
             plugins : |
               fox.jason.extend.css
               net.infotexture.dita-bootstrap
