--- a/.github/workflows/new4.yml
+++ b/.github/workflows/new4.yml
@@ -71,8 +71,8 @@ jobs:
               https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
               https://github.com/infotexture/dita-bootstrap/archive/master.zip
               https://github.com/infotexture/dita-bootstrap.lunr/archive/master.zip
-              https://github.com/jason-fox/fox.jason.prismjs/archive/master.zip
               org.doctales.xmltask
+              fox.jason.prismjs
               fox.jason.favicon
             project: .github/dita-ot/html.xml
 
