--- a/.github/workflows/new4.yml
+++ b/.github/workflows/new4.yml
@@ -70,7 +70,7 @@ jobs:
             plugins : |
               https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
               https://github.com/infotexture/dita-bootstrap/archive/master.zip
-              https://github.com/infotexture/dita-bootstrap.lunr/archive/master.zip
+              net.infotexture.dita-bootstrap.lunr
               fox.jason.prismjs
               fox.jason.favicon
             project: .github/dita-ot/html.xml
