--- a/.github/workflows/new4.yml
+++ b/.github/workflows/new4.yml
@@ -106,8 +106,9 @@ jobs:
 
       - name: copy images
         run: |
-          cp de/resources/dfg_logo_schriftzug_blau_foerderung_4c.jpg out/html/resources/
-          cp de/resources/icon20x24px-exported-transparent.png       out/html/resources/
+          ls
+          sudo cp de/resources/dfg_logo_schriftzug_blau_foerderung_4c.jpg out/html/resources/
+          sudo cp de/resources/icon20x24px-exported-transparent.png out/html/resources/
           
             
     
