--- a/.github/workflows/new4.yml
+++ b/.github/workflows/new4.yml
@@ -49,7 +49,7 @@ jobs:
            -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml \
            -s:de/ocrd_ocrd.ditamap \
            -o:de/ocrd_ocrd_wiki.ditamap
-           sudo cp de/ocrd_ocrd_wiki.ditamap out/
+           
       
       - name: add wiki faq english
         run: |
@@ -108,6 +108,7 @@ jobs:
         run: |
           sudo cp de/resources/dfg_logo_schriftzug_blau_foerderung_4c.jpg out/html/resources/
           sudo cp de/resources/icon20x24px-exported-transparent.png out/html/resources/
+          sudo cp de/ocrd_ocrd_wiki.ditamap out/html/resources/
           
             
     
