--- a/.github/workflows/new6.yml
+++ b/.github/workflows/new6.yml
@@ -106,8 +106,8 @@ jobs:
 
       - name: copy images
         run: |
-          sudo cp de/resources/dfg_logo_schriftzug_blau_foerderung_4c.jpg out/html/
-          sudo cp de/resources/icon20x24px-exported-transparent.png out/html/
+          sudo cp de/resources/dfg_logo_schriftzug_blau_foerderung_4c.jpg out/html/resources/
+          sudo cp de/resources/icon20x24px-exported-transparent.png out/html/resources/
           
           
             
